force-app/main/default/objects/Inventory_Item__c/Inventory_Item__c.object-meta.xml
<CustomObject>
    <description>Represents an item kept in inventory, such as seeds, fertilizer, etc.</description>
    <label>Inventory Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>