force-app/main/default/objects/Inventory_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seeds</fullName>
            </value>
            <value>
                <fullName>Fertilizer - Chemical</fullName>
            </value>
            <value>
                <fullName>Fertilizer - Organic</fullName>
            </value>
            <value>
                <fullName>Pesticide - Organic</fullName>
            </value>
            <value>
                <fullName>Irrigation Equipment</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Saplings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>