force-app/main/default/objects/Inventory_Item__c/fields/Current_Stock__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock__c</fullName>
    <description>The current quantity of the item in stock.</description>
    <label>Current Stock</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>