force-app/main/default/objects/Inventory_Item__c/fields/Location_Storage__c.field-meta.xml
<CustomField>
    <fullName>Location_Storage__c</fullName>
    <label>Location/Storage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>