force-app/main/default/objects/Inventory_Item__c/fields/Minimum_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Stock_Level__c</fullName>
    <description>The quantity below which a low stock alert should be triggered.</description>
    <label>Minimum Stock Level</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>