force-app/main/default/objects/Inventory_Item__c/fields/Reorder_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Quantity__c</fullName>
    <label>Reorder Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>