force-app/main/default/objects/Inventory_Item__c/fields/Stock_Alert__c.field-meta.xml
<CustomField>
    <fullName>Stock_Alert__c</fullName>
    <formula>AND(NOT(ISBLANK(Current_Stock__c)), NOT(ISBLANK(Minimum_Stock_Level__c)), Current_Stock__c &lt;= Minimum_Stock_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Alert</label>
    <type>Checkbox</type>
</CustomField>