force-app/main/default/objects/Inventory_Item__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <label>Supplier Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>