force-app/main/default/objects/Inventory_Item__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>The unit of measurement for this inventory item.</description>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
                <default>true</default>
                <label>Units</label>
            </value>
            <value>
                <fullName>Cuttings</fullName>
            </value>
            <value>
                <fullName>Meters</fullName>
            </value>
            <value>
                <fullName>Pieces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>