force-app/main/default/objects/Inventory_Item__c/validationRules/Prevent_Negative_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Negative_Stock</fullName>
    <active>true</active>
    <description>Stock cannot be negative</description>
    <errorConditionFormula>Current_Stock__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Current_Stock__c</errorDisplayField>
    <errorMessage>Stock quantity cannot be negative. Please enter a valid quantity.</errorMessage>
</ValidationRule>